# microml

./: .gitignore  Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: lib.rs  loss.rs  nn.rs  value.rs
mnist/: Cargo.toml  text.txt
mnist/src/: main.rs
moons/: Cargo.toml
moons/src/: main.rs
src/: lib.rs  nn.rs
