[package]
name = "mnist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
microml = { path = "../lib" }
tokio = { version = "1", features = ["full"] }
dataset = { git = "https://github.com/J45k4/dataset.git", rev = "d9635342e2e2dd05f7bd22c3d0f3792f97ccd9c8" }
simple_logger = "4"
log = "0.4"