[package]
name = "mnist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
microml = { path = "../lib" }
tokio = { version = "1", features = ["full"] }
dataset = { git = "https://github.com/J45k4/dataset.git", rev = "554d8df95511a4b70af53c8b16a4ffabd4361184" }
simple_logger = "4"
log = "0.4"