[package]
name = "moons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
microml = { path = "../lib" }
tokio = { version = "1", features = ["full"] }
dataset = { git = "https://github.com/J45k4/dataset.git", rev = "7c4246a4e947b06eabeb53e85f273a5cae958adc" }
simple_logger = "4"
log = "0.4"
plotters = "0.3"
anyhow = "1"
rand = "0.8"